<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".knowledge">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">


        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sjz1"
            android:textSize="30dp"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sjz2"
            android:textColor="@color/colorText"
            android:layout_marginTop="20dp"
            android:textSize="25dp" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ejz1"
            android:textSize="30dp"
            android:layout_marginTop="25dp"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ejz2"
            android:textColor="@color/colorText"
            android:layout_marginTop="20dp"
            android:textSize="25dp" />

        <Button
            android:id="@+id/button_back1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="返回"
            android:textSize="25dp"/>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>